tests/ui-tests/tests/cases/wrong-scalar-type.stderr
error[E0277]: u64 cannot be used for fields of type i32
  --> tests/cases/wrong-scalar-type.rs:15:21
   |
15 |         episode_id: Option<u64>,
   |                     ^^^^^^ The GraphQL schema expects a i32 here but u64 is not registered for use with fields of that type
   |
   = help: the trait `OutputScalar<'_, i32>` is not implemented for `u64`, which is required by `ScalarDeserialize<std::option::Option<u64>, std::option::Option<i32>>: Deserialize<'de>`
   = note: You either need to fix the type used on this field, or register u64 for use as a i32
   = help: the following other types implement trait `OutputScalar<'de, SchemaType>`:
             <f64 as OutputScalar<'de, f64>>
             <i32 as OutputScalar<'de, i32>>
   = note: required for `std::option::Option<u64>` to implement `OutputScalar<'_, std::option::Option<i32>>`
   = note: required for `ScalarDeserialize<std::option::Option<u64>, std::option::Option<i32>>` to implement `Deserialize<'de>`
note: required by a bound in `next_value`
  --> $CARGO/serde-1.0.210/src/de/mod.rs
   |
   |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
   |        ---------- required by a bound in this associated function
   |     where
   |         V: Deserialize<'de>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`
